syntax = "proto3";

package crypto.v1;

enum CoinType {
    XMR = 0;
    BTC = 1;
    LTC = 2;
    ETH = 3;
    TON = 4;
    
    // ERC20
    USDT_ERC20 = 5;
    USDC_ERC20 = 6;
    DAI_ERC20 = 7;
    WBTC_ERC20 = 8;
    UNI_ERC20 = 9;
    LINK_ERC20 = 10;
    AAVE_ERC20 = 11;
    CRV_ERC20 = 12;
    MATIC_ERC20 = 13;
    SHIB_ERC20 = 14;
    BNB_ERC20 = 15;
    ATOM_ERC20 = 16;
    ARB_ERC20 = 17;

    BNB = 18;
    // BEP20
    BSCUSD_BEP20 = 19;
    USDC_BEP20 = 20;
    DAI_BEP20 = 21;
    BUSD_BEP20 = 22;
    WBTC_BEP20 = 23;
    BTCB_BEP20 = 24;
    UNI_BEP20 = 25;
    LINK_BEP20 = 26;
    AAVE_BEP20 = 27;
    MATIC_BEP20 = 28;
    SHIB_BEP20 = 29;
    ATOM_BEP20 = 30;
    ARB_BEP20 = 31;
    ETH_BEP20 = 32;
    XRP_BEP20 = 33;
    ADA_BEP20 = 34;
    TRX_BEP20 = 35;
    DOGE_BEP20 = 36;
    LTC_BEP20 = 37;
    BCH_BEP20 = 38;
    TWT_BEP20 = 39;
    AVAX_BEP20 = 40;
    CAKE_BEP20 = 41;
}

message XmrKeysUpdateRequest {
    string privViewKey = 1;
    string pubSpendKey = 2;
}

message BtcKeysUpdateRequest {
    string masterPubKey = 1;
}

message LtcKeysUpdateRequest {
    string masterPubKey = 1;
}

message EthKeysUpdateRequest {
    string masterPubKey = 1;
}

message BnbKeysUpdateRequest {
    string masterPubKey = 1;
}