syntax = "proto3";

import "crypto.proto";

package user.v1;

message RegisterUserRequest {
    optional string userId = 1;
}
message RegisterUserResponse {
    string userId = 1;
}

message UpdateCryptoKeysRequest {
    string userId = 1;
    optional crypto.v1.XmrKeysUpdateRequest xmrReq = 2;
    optional crypto.v1.BtcKeysUpdateRequest btcReq = 3;
    optional crypto.v1.LtcKeysUpdateRequest ltcReq = 4;
    optional crypto.v1.EthKeysUpdateRequest ethReq = 5;
}
message UpdateCryptoKeysResponse {}

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc UpdateCryptoKeys(UpdateCryptoKeysRequest) returns (UpdateCryptoKeysResponse);
}

